Bug 1681771 - Update nursery used bytes threshold to 3MB. r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D99868